--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,12 @@ h1 ,h2, h3, h4, h5, h6, p {
     margin: 0;
 }
 
+ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
 .container {
     max-width: 1230px;
     padding: 0 15px;
@@ -33,6 +39,7 @@ h1 ,h2, h3, h4, h5, h6, p {
     background-repeat: no-repeat;
     min-height: 100vh;
     background-position: center;
+    margin-bottom: 80px;
 }
 
 .header::before {
@@ -161,7 +168,108 @@ h1 ,h2, h3, h4, h5, h6, p {
     text-align: center;
 }
 
+.info {
+    background: url(../images/info-bg.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    position: relative;
+}
 
+.info::before {
+    content: "";
+    position: absolute;
+    height: 130px;
+    background-color: #262c27;
+    top: 0;
+    left: 0;
+    right: 0;
+    transform: translateY(-120px);
+    z-index: 1;
+}
+
+.info__top {
+    display: flex;
+    gap: 80px;
+    padding-top: 100px;
+    margin-bottom: 65vh;
+}
+
+.info__top-text {
+    padding-top: 245px;
+    width: 290px;
+    color: #fff;
+    position: relative;
+}
+
+.info__top-text--1 {
+    padding-bottom: 125px;
+}
+
+.info__top-text--2 {
+    border-bottom: 1px solid #fff;
+}
+
+.info__top-img {
+    position: relative;
+    z-index: 6;
+}
+
+.popup-btn {
+    text-align: center;
+    border: none;
+    cursor: pointer;
+    background-color: transparent;
+}
+
+.popup-btn span {
+    padding-top: 12px;
+    display: block;
+    color: #fff;
+}
+
+.info__btn {
+    position: absolute;
+    bottom: 0;
+    right: 0;   
+}
+
+.info__specs {
+    display: flex;
+    align-items: center;
+    gap: 130px;
+    color: #fff;
+    padding-bottom: 50px;
+}
+
+.info__specs-title {
+    text-transform: uppercase;
+    font-family: 'Comfortaa', cursive;
+    font-size: 60px;
+    line-height: 67px;
+    width: 250px;
+}
+
+.info__specs-list {
+    border-top: 1px solid #fff;
+    border-bottom: 1px solid #fff;
+    padding: 30px 0;
+    width: 565px;
+    font-weight: 700;
+
+
+}
+
+.info__specs-item {
+    margin-bottom: 15px;
+    display: flex;
+    gap: 25px;
+}
+
+.info__specs-caption {
+    width: 185px;
+
+}
 
 
 
