--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,19 @@ ul {
     list-style: none;
 }
 
+img {
+   object-fit: cover; 
+}
+
+.title {
+    font-family: 'Comfortaa', cursive;
+    font-weight: 400;
+    text-transform: uppercase;
+    font-size: 60px;
+    line-height: 67px;
+
+}
+
 .container {
     max-width: 1230px;
     padding: 0 15px;
@@ -220,6 +233,7 @@ ul {
     border: none;
     cursor: pointer;
     background-color: transparent;
+    position: absolute;
 }
 
 .popup-btn span {
@@ -229,7 +243,6 @@ ul {
 }
 
 .info__btn {
-    position: absolute;
     bottom: 0;
     right: 0;   
 }
@@ -243,10 +256,6 @@ ul {
 }
 
 .info__specs-title {
-    text-transform: uppercase;
-    font-family: 'Comfortaa', cursive;
-    font-size: 60px;
-    line-height: 67px;
     width: 250px;
 }
 
@@ -271,7 +280,7 @@ ul {
 }
 
 .buy {
-    padding: 150px 0;
+    padding: 150px 0 0;
 }
 
 .buy__inner {
@@ -286,11 +295,7 @@ ul {
 }
 
 .buy__title {
-    text-transform: uppercase;
     margin-bottom: 50px;
-    font-family: 'Comfortaa', cursive;
-    font-size: 60px;
-    line-height: 67px;
     color: #0093a1;
 }
 
@@ -313,10 +318,6 @@ ul {
     text-transform: uppercase;
     margin-bottom: 5px;
     transition: color .3s;
-}
-
-.buy__item-text {
-
 }
 
 .buy__price {
@@ -357,4 +358,134 @@ ul {
     color: #262c27;
 }
 
+.technology{
+    margin-bottom: 150px;
+}
 
+.technology__top {
+    background: url(../images/tech-bg.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+.technology__top-inner {
+    position: relative;
+    min-height: 110vh;
+}
+
+.technology__btn {
+    right: 350px;
+    top: 50vh;
+}
+
+.technology__top-box {
+    position: absolute;
+    left: 0;
+    bottom: 70px;
+}
+
+.technology__title {
+    max-width: 470px;
+    margin-bottom: 62px;
+}
+
+.technology__list {
+    margin: 0;
+    padding-left: 20px;
+}
+
+
+.technology__list-item {
+    padding-left: 24px;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 24px;
+    margin-bottom: 15px;
+}
+
+.gallery__box {
+    display: flex;
+    gap: 68px;
+    margin-top: 115px;
+}
+
+.gallery__text {
+    width: 350px;
+}
+
+.gallery-min {
+    display: grid;
+    gap: 30px 25px;
+    grid-template-columns: 481px 208px;
+    grid-template-rows: 432px 300px;
+    margin-top: -35%;
+    margin-bottom: 150px;
+    position: relative;
+    padding: 72px 31px 52px;
+}
+
+.gallery-min::before {
+    content: "";
+    position: absolute;
+    border: 3px solid #262c27;
+    border-radius: 200px 0 300px;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+}
+
+.gallery-min__img--1 {
+    grid-column: 1 / 3;
+    border-radius: 400px 0px 0px 0px;
+}
+
+.gallery-min__img--2 {
+    border-radius: 0px 0px 0px 300px;
+}
+
+.gallery-max {
+    display: grid;
+    gap: 20px;
+    grid-template-columns: 300px 469px 391px;
+    grid-template-rows: 340px 270px 270px;
+}
+
+.gallery-max__img--2 {
+    grid-column: 2 / -1;
+    justify-self: end;
+    border-radius: 0px 500px 0px 0px;
+}
+
+.gallery-max__img--3 {
+    border-radius: 0px 0px 150px 0px;
+}
+
+.gallery-max__img--4 {
+    border-radius: 0px 200px 0px 0px;
+}
+
+.gallery-max__img--5 {
+    border-radius: 200px 0px 0px 0px;
+}
+
+.gallery-max__img--6 {
+    grid-column: 2 / -1;
+    border-radius: 0px 0px 0px 400px;
+}
+
+
+.gallery-max__text {
+    background-color: #0093a1;
+    color: #fff;
+    border-radius: 0px 0px 0px 200px;
+    font-family: 'Inter', sans-serif;
+    font-weight: 800;
+    font-size: 32px;
+    line-height: 39px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
