--- a/css/style.css
+++ b/css/style.css
@@ -240,6 +240,23 @@ img {
     padding-top: 12px;
     display: block;
     color: #fff;
+    transition: color .3s;
+}
+
+.popup-btn circle, .popup-btn path {
+    transition: all .3s;
+}
+
+.popup-btn:hover circle {
+    stroke: #b9c400;
+}
+
+.popup-btn:hover path {
+    fill: #b9c400;
+}
+
+.popup-btn span:hover {
+    color: #0093a1;
 }
 
 .info__btn {
@@ -333,7 +350,12 @@ img {
     justify-content: center;
     align-items: center;
     background: url(../images/star.svg);
+    transition: transform .3s;
 
+}
+
+.buy__price:hover {
+    transform: scale(1.3);
 }
 
 .buy__btn {
@@ -489,3 +511,87 @@ img {
     align-items: center;
     text-align: center;
 }
+
+
+.footer {
+    padding: 100px 0 80px;
+    background-color: #262c27;
+    color: #fff;
+}
+
+.footer__top {
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer__logo {
+    align-self: flex-start;
+}
+
+.footer__logo path {
+    transition: fill .3s;
+
+}
+
+.footer__logo path:hover {
+    fill: #0093a1;
+    
+}
+
+.footer__title {
+    margin-bottom: 27px;
+
+}
+
+.footer__form {
+    max-width: 500px;
+
+}
+
+.footer__form-input {
+    background-color: transparent;
+    border: none;
+    border-bottom: 1px solid rgba(255, 255, 255, .4);
+    display: block;
+    width: 100%;
+    padding: 10px 0;
+    margin-bottom: 57px;
+    color: #fff;
+}
+
+.footer__form-input::placeholder {
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 22px;
+    opacity: .2;
+}
+
+.footer__form-btn {
+    background-color: #fff;
+    padding: 10px 66px;
+    border: none;
+    font-family: 'Comfortaa', cursive;
+    margin-bottom: 110px;
+    text-transform: uppercase;
+    cursor: pointer;
+    color: #000;
+}
+
+.footer__social-title {
+    margin-bottom: 28px;
+    font-weight: 700;
+}
+
+.footer__gallery {
+    display: grid;
+    gap: 52px;
+    grid-template-columns: repeat(4, 1fr);
+    margin-bottom: 50px;
+}
+
+.footer__menu-list {
+    font-weight: 700;
+    display: flex;
+    justify-content: space-between;
+}
+
