--- a/css/style.css
+++ b/css/style.css
@@ -595,3 +595,242 @@ img {
     justify-content: space-between;
 }
 
+
+@media(max-width: 1230px) {
+    .header__decor-text--2 {
+        left: 0;
+    }
+
+    .buy__inner {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .buy__img {
+        order: -1;
+        max-width: 100%;
+    }
+
+    .buy__content {
+        width: 100%;
+    }
+
+    .buy__price {
+        pointer-events: none;
+    }
+
+    .buy__item {
+        width: 100%;
+        max-width: 600px;
+    }
+
+    .gallery-max {
+        grid-template-columns: 1fr 2fr 1fr;
+        grid-template-rows: auto auto auto;
+    }
+
+    .gallery-max__img {
+        width: 100%;
+        align-self: stretch;
+    }
+
+    .footer__gallery-item {
+        width: 100%;
+        align-self: stretch;
+    }
+}
+
+@media(max-width: 1175px) {
+    .gallery__box {
+        flex-wrap: wrap;
+    }
+
+    .gallery-min {
+        margin-top: 0;
+
+    }
+
+    .gallery__text {
+        width: 100%;
+    }
+
+    .gallery-min__img {
+       width: 100%; 
+       align-self: stretch;
+    }
+
+    .gallery-min {
+        grid-template-columns: 2fr 1fr;
+        grid-template-rows: auto auto;
+        width: 100%;
+    }
+}
+
+
+
+@media(max-width: 1000px) {
+    .info__top {
+        display: block;
+
+    }
+
+    .info__top-text {
+        width: 100%;
+    }
+
+    .info__top-text--2 {
+        padding-bottom: 25px;
+        padding-top: 45px;
+    }
+
+    .info__top-img {
+        display: block;
+        width: 227px;
+        margin: 0 auto;
+    }
+
+    .info__specs {
+        display: block;
+    }
+
+    .footer__top {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    .footer__logo {
+        order: -1;
+        margin: 0 auto 50px;
+        display: inline-block;
+    }
+
+    .footer__gallery {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 20px;
+    }
+
+    .footer__menu-list {
+        display: block;
+        text-align: center
+    }
+
+    .footer__menu-item {
+        padding: 15px 0;
+    }
+
+    .footer__social-title {
+        text-align: center;
+    }
+}
+
+@media(max-width: 840px) {
+    .buy__price {
+        bottom: auto;
+        top: -350px;
+    }
+
+    .gallery-min {
+        margin-bottom: 50px;
+    }
+
+    .gallery-max__text {
+        font-size: 18px;
+        line-height: 20px;
+    }
+
+}
+
+@media(max-width: 720px) {
+    .header__top {
+        justify-content: center;
+        flex-wrap: wrap;
+        gap: 30px 90px;
+    }
+
+    .header__btn {
+        width: 75%;
+    }
+
+    .header__content-box {
+        margin-right: 0;
+    }
+
+    .technology__btn {
+        right: 50px;
+        top: 40vh;
+    }
+}
+
+
+@media(max-width: 630px) {
+    .info__specs-list {
+        width: 100%;
+    }
+
+    .info__specs-item {
+        display: block;
+    }
+
+    .title {
+        font-size: 48px;
+        line-height: 56px;
+    }
+
+    .gallery-min {
+        padding: 20px 10px 20px;
+    }
+}
+
+
+@media(max-width: 500px) {
+    .buy__price {
+        background-size: cover;
+        width: 170px;
+        height: 168px;
+        top: -185px;
+    }
+}
+
+@media(max-width: 414px) {
+    .header__decor-text {
+        display: none;
+    }
+
+    .header__content {
+        z-index: 5;
+    }
+
+    .gallery-min, 
+    .gallery-max {
+        gap: 10px;
+    }
+
+    .gallery-min::before {
+        display: none;
+    }
+
+    .technology__title {
+        font-size: 32px;
+        line-height: 36px;
+    }
+
+    .footer__title {
+        font-size: 34px;
+        line-height: 38px;
+    }
+
+    .footer__logo svg{
+        width: 90%;
+    }
+}
+
+
+@media(max-width: 375px) {
+    .header__title {
+        font-size: 55px;
+        line-height: 60px;
+    }
+
+
+}
